--- a/src/pages/home/style.scss
+++ b/src/pages/home/style.scss
@@ -80,7 +80,7 @@ main {
 
 .about {
     width: 100%;
-    height: 100%;
+    height: 100vh;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -114,7 +114,7 @@ main {
 
 .modal-about {
     width: 100%;
-    height: 100%;
+    height: 100vh;
     background-color: rgba(0, 0, 0, 0.5);
     position: absolute;
     z-index: -1;
