--- a/src/pages/externos/style.scss
+++ b/src/pages/externos/style.scss
@@ -45,6 +45,7 @@
         width: 180px;
         height: 220px;
         border-radius: 2px;
+        object-fit: cover;
 
         @media(min-width: 443px) {
             width: 220px;
