--- a/src/pages/home/style.scss
+++ b/src/pages/home/style.scss
@@ -157,6 +157,7 @@ section {
         width: 180px;
         height: 220px;
         border-radius: 2px;
+        object-fit: cover;
 
         @media(min-width: 500px) {
             width: 230px;
