--- a/src/pages/home/style.scss
+++ b/src/pages/home/style.scss
@@ -120,22 +120,14 @@ main {
     z-index: -1;
 }
 
-.content-about {
-    width: 80%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    text-align: center;
-    font-weight: 500;
-}
 
 section {
     width: 100%;
-    height: 130vh;
+    height: 160vh;
     display: flex;
     align-items: center;
     justify-content: center;
+    padding-top: 50px;
 }
 
 .production-container {
@@ -146,18 +138,33 @@ section {
     align-items: center;
     justify-content: center;
     gap: 15px;
+    }
+    
+.content-about {
+    width: 80%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    font-weight: 500;
 }
 
 .grid-images {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
-    gap: 5px;
+    gap: 10px;
 
     img {
         width: 180px;
         height: 220px;
         border-radius: 2px;
         object-fit: cover;
+        cursor: pointer;
+
+        &:hover {
+            border: 1px solid #fff;
+        }
 
         @media(min-width: 500px) {
             width: 230px;
@@ -173,7 +180,7 @@ section {
 
 form{
     width: 100%;
-    height: 70vh;
+    height: 100vh;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -225,5 +232,33 @@ form{
             color: #fff;
             border: 1px solid #fff;
         }
+    }
+}
+
+.container-img {
+    width: 100vw;
+    height: 100vh;
+    position: fixed;
+    top: 0;
+    left: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 2024;
+    transition: 0.5s;
+}
+
+.content-img {
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.9);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    img {
+        width: 90%;
+        height: 90%;
+        object-fit: contain;
     }
 }
