--- a/src/pages/internos/style.scss
+++ b/src/pages/internos/style.scss
@@ -37,23 +37,27 @@
     margin-top: 40px;
     display: grid;
     grid-template-columns: repeat(2,  1fr);
-    row-gap: 5px;
+    gap: 5px;
+    padding: 10px;
     align-items: center;
     justify-items: center;
 
     img {
-        width: 180px;
+        width: 100%;
         height: 220px;
         border-radius: 2px;
         object-fit: cover;
+        cursor: pointer;
+
+        &:hover {
+            border: 1px solid #fff;
+        }
 
         @media(min-width: 443px) {
-            width: 220px;
             height: 250px;
         }
 
         @media(min-width: 520px) {
-            width: 250px;
             height: 300px;
         }
     }
@@ -62,11 +66,9 @@
         grid-template-columns: repeat(3,  1fr);
 
         img {
-            width: 200px;
             height: 280px;
 
             @media(min-width: 740px) {
-                width: 240px;
                 height: 300px;
             }
         }
@@ -76,11 +78,9 @@
         grid-template-columns: repeat(4,  1fr);
 
         img {
-            width: 200px;
             height: 280px;
 
             @media(min-width: 1024px) {
-                width: 250px;
                 height: 320px;
             }
         }
