--- a/src/components/whats-contact/style.scss
+++ b/src/components/whats-contact/style.scss
@@ -1,5 +1,5 @@
 .whats {
-    display: flex;
+    display: none;
     position: fixed;
     bottom: 15px;
     right: 15px;
@@ -7,6 +7,10 @@
     align-items: center;
     justify-content: center;
     cursor: pointer;
+
+    @media (max-width: 980px) {
+        display: flex;
+    }
 
     div {
         display: flex;
