--- a/src/pages/internos/style.scss
+++ b/src/pages/internos/style.scss
@@ -15,6 +15,10 @@
     align-items: center;
     justify-content: center;
     margin-top: 80px;
+
+    h1 {
+        margin-top: 150px;
+    }
 }
 
 .content-ensaios-internos {
