--- a/src/components/header/styles.scss
+++ b/src/components/header/styles.scss
@@ -3,11 +3,13 @@ header {
     align-items: center;
     justify-content: space-between;
     width: 100%;
-    height: 60px;
-    padding: 0 15px;
+    height: 80px;
+    background-color: rgba(255, 255, 255, 0.149);
+    backdrop-filter: blur(10px);
+    padding: 0 20px;
     box-sizing: border-box;
     position: fixed;
-    z-index: 2;
+    z-index: 2202020;
 }
 
 .logo {
@@ -16,14 +18,26 @@ header {
     font-weight: bold;
     cursor: pointer;
 
+    .name-1 {
+        font-size: 24px;
+    }
+
     .name-2 {
         padding-left: 10px;
         color: #8c8c8c;
+        font-size: 16px;
     }
 }
 
 .icon-bar {
     cursor: pointer;
+    font-size: 24px;
+    transition: transform 0.3s ease, color 0.3s ease; /* Transição suave para transformação e cor */
+    
+    &.active {
+        transform: rotate(90deg); /* Rotação ao abrir o menu */
+        color: #8c8c8c; /* Cor ao ativar */
+    }
 
     @media(min-width: 980px) {
         display: none;
@@ -45,15 +59,24 @@ header {
             list-style-type: none;
             font-weight: 500;
             cursor: pointer;
-            transition: 0.5s;
+            transition: color 0.3s, transform 0.3s;
 
             &:hover {
                 color: #8c8c8c;
+                transform: scale(1.05);
             }
         }
     }
 
     @media(max-width: 980px) {
         display: none;
+    }
+}
+
+.mobile-nav {
+    display: none;
+
+    @media(max-width: 980px) {
+        display: block;
     }
 }
