--- a/src/pages/home/style.scss
+++ b/src/pages/home/style.scss
@@ -234,7 +234,7 @@ p {
     top: 0;
     left: 0;
     width: 100%;
-    height: 100%;
+    height: 100dvh;
     background-color: rgba(0, 0, 0, 0.8);
     display: flex;
     align-items: center;
@@ -245,10 +245,12 @@ p {
 .content-img {
     max-width: 90%;
     max-height: 90%;
+    
     img {
         width: 100%;
-        height: auto;
+        height: 100dvh;
         border-radius: 5px;
+        object-fit: cover;
     }
 }
 
